<resources>
    <string name="app_name">Jeux de mémoire</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Paramètres</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Application principale -->
    <string name="jouer">Jouer</string>
    <string name="entrainement">Entraînement</string>
    <string name="difficulteAide">Difficulté</string>
    <string name="accueil">Accueil</string>

    <string name="joueraccueil">Jouer une partie normale</string>
    <string name="entrainementaccueil">Jouer une partie entraînement</string>
    <string name="difficulte">Changer la difficulté</string>
    <string name="regles">Connaître les règles du jeu</string>

    <string name="tutoTexte1">Bienvenue.</string>
    <string name="title_activity_parametre">Paramètre</string>


    <string name="annuler">Annuler</string>
    <string name="memorydifficulte1">Classique (3 lignes et 4 colonnes de cartes, 1 paire par image)</string>
    <string name="memorydifficulte2">Facile (3 lignes et 4 colonnes de cartes, 1 ou 2 paire(s) par image)</string>
    <string name="memorydifficulte3">Moyen (4 lignes et 4 colonnes de cartes, 1 ou 2 paire(s) par image)</string>
    <string name="memorydifficulte4">Difficile (4 lignes et 6 colonnes de cartes, 2 ou 3 paires par image)</string>

    <string name="lotodifficulte1">Facile (2 lignes et 3 colonnes, 5 cases contenants des nombres allants de 1 à 10)</string>
    <string name="lotodifficulte2">Moyen (3 lignes et 4 colonnes, 9 cases contenants des nombres allants de 1 à 20)</string>
    <string name="lotodifficulte3">Difficile (3 lignes et 6 colonnes, 12 cases contenants des nombres allants de 1 à 30)</string>

    <string name="boulierdifficulte1">Facile (5 boules)</string>
    <string name="boulierdifficulte2">Moyen (7 boules)</string>
    <string name="boulierdifficulte3">Difficile (10 boules)</string>

    <string name="nombredifficulte1">Facile (Nombre de départ à 1 chiffre)</string>
    <string name="nombredifficulte2">Moyen (Nombre de départ à 2 chiffres)</string>
    <string name="nombredifficulte3">Difficile (Nombre de départ à 3 chiffres)</string>

    <string name="pianodifficulte1">Facile (Non existant)</string>
    <string name="pianodifficulte2">Moyen (Vous voyez les touches jouées par l\'ordinateur)</string>
    <string name="pianodifficulte3">Difficile (Vous ne voyez pas les touches jouées par l\'ordinateur)</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <!-- Jeux -->
    <string name="demandeNom">Saisissez votre nom si vous voulez enregistrer votre score:</string>

    <!-- Boulier -->
    <string name="rep">Répondre</string>
    <string name="debScore">Score</string>
    <string name="sequence">Regardez la séquence.</string>

    <string name="tentative">Vous disposez de n tentatives pour avoir une séquence complètement correct, bonne chance.</string>
    <string name="debTentative">Vous disposez de</string>
    <string name="endTentative">tentatives pour avoir une séquence complètement correct, bonne chance.</string>
    <string name="notLastTentative">Tentatives restantes:</string>
    <string name="lastTentative">Dernière tentative !</string>

    <string name="tentativeEnt">Vous disposez de tentatives illimités pour avoir une séquence complètement correct, amusez-vous bien.</string>
    <string name="notLastTentativeEnt">tentative(s) utilisées.</string>

    <string name="ligneNonCompleteTexte">Vous devez compléter la ligne du bas avant de répondre.</string>
    <string name="LigneNonCompleteTitre">Ligne non complète !</string>
    <string name="LigneNonCompleteOk">J\'ai compris.</string>

    <string name="scoreFinal">Score final</string>

    <string name="sequenceCompleteTexte1">Félicitation ! les deux séquences sont identiques.</string>
    <string name="sequenceCompleteTexte2">Nombre de tentative(s) utilisée(s)</string>
    <string name="sequenceCompleteTitre">Gagner !</string>
    <string name="sequenceCompleteOk">Génial !</string>

    <string name="tentativeEpuiseesTexte">Votre nombre de tentatives est épuisé...</string>
    <string name="tentativeEpuiseesTitre">Perdu !</string>
    <string name="tentativeEpuisseOk">Mince...</string>

    <string name="resetTexte">Voulez-vous rejouez ?</string>
    <string name="resetTitre">Rejouer ?</string>
    <string name="resetOui">Oui</string>
    <string name="resetNon">Non (revenir au menu principal)</string>

    <string name="easterEgg">Mamamia !</string>

    <!-- Piano -->
    <string name="tourMachine">Ecoutez la séquence...</string>
    <string name="tourJoueur">A vous !</string>
    <string name="lancerButtonText"> Lancer </string>

    <string name="perduTexte1p1">Vous avez appuyé sur la mauvaise touche.</string>
    <string name="perduTexte1p2"> Vous avez fait un score de</string>
    <string name="perduTexte2">et vous avez appuyé correctement sur</string>
    <string name="perduTexte3">touche(s) dans cette séquence.</string>

    <string name="erreurEntrainement1">Vous avez appuyé correctement sur</string>
    <string name="erreurEntrainement2">touche(s) avant de vous tromper.</string>

    <string name="recommencerSequence">Recommencer la séquence</string>

    <!-- Loto -->
    <string name="rec">Réclamer</string>

    <string name="regardez">Regardez ces nombres.</string>

    <string name="plus1">+1</string>
    <string name="plus5lig">+1/+5 (ligne)</string>
    <string name="plus5col">+1/+5 (colonne)</string>
    <string name="plus10">+1/+10 (ligne et colonne)</string>
    <string name="plus50">+50 (grille)</string>

    <string name="completTitre">Grille complète</string>
    <string name="completTexte">Vous avez compléter cette Grille !!!!</string>
    <string name="completOk">Je suis prêt pour la prochaine !</string>

    <string name="perduTitre">Perdue !</string>
    <string name="perduTexte">Vous avez perdu tous vos vies...</string>
    <string name="perduOk">Aie...</string>

    <!-- Memory -->
    <string name="cartesRevelees">Bravo vous avez gagné !!</string>
    <string name="manqueVies">Mince vous avez perdue toute vos vies !!</string>
    <string name="points1">Vous avez eu</string>
    <string name="points2">points.</string>
    <string name="rejouer">Rejouer</string>
    <string name="revenir">Revenir au menu</string>

    <string name="pairesTrouvees">Toute les paires sont trouvées !</string>
    <string name="endEntrainementTexte1">Vous avez trouvé toute les paires en réalisant</string>
    <string name="endEntrainementTexte2">erreur(s).</string>

    <!-- Nombres -->
    <string name="LoseText">Perdu ! Votre score est de:</string>
    <string name="Title">Dommage !</string>
    <string name="ok">Ok</string>
    <string name="Recommencer">Recommencer</string>
    <string name="reassayerEnt">Continuer</string>
    <string name="LoseEntrainement1">Zut, vous vous êtes trompé à la case</string>
    <string name="LoseEntrainement2">. Vous pouvez retenter votre chance avec une séquence de nombres de même taille.</string>
</resources>
