<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="memory.bestmemorygames.aide.AideLoto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/fond_aide">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

                <Button
                    android:id="@+id/facile"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:textColor="@color/correct"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="monospace"
                    android:text="@string/lotodifficulte1"
                    android:textSize="17sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/moyen"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:textColor="@color/orange"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="monospace"
                    android:text="@string/lotodifficulte2"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/difficile"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:textColor="@color/erreur"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="monospace"
                    android:text="@string/lotodifficulte3"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/annuler"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="monospace"
                    android:text="@string/annuler"
                    android:textSize="18sp"
                    android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>
