<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="memory.bestmemorygames.aide.AidePiano">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/fond_aide">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView21"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="monospace"
                android:text="Apprendre à jouer au piano"
                android:textAlignment="center"
                android:textColor="@color/bordure"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textView20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/textView22"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="monospace"
                android:text="Tout d'abord, l'ordinateur va mettre en évidence une touche du piano. Puis à votre tour, vous devrez reproduire ce que l'ordinateur a fait en appuyant sur la même touche.
Ensuite, cela va se compliquer, l'ordinateur va refaire la même chose mais en ajoutant une nouvelle touche à appuyer. Ainsi de suite.
Attention, retenez bien la séquence des touches pour gagner un maximum de points !"
                android:textAlignment="center"
                android:textColor="@color/bordure"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView24"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/id_button_jouer"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="monospace"
                    android:text="@string/jouer"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/id_button_entrainement"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="monospace"
                    android:text="@string/entrainement"
                    android:textSize="18sp"
                    android:textStyle="bold" />


            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/id_button_difficulte"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="monospace"
                    android:text="@string/difficulteAide"
                    android:textSize="18sp"
                    android:textStyle="bold" />
                <Button
                    android:id="@+id/id_button_accueil"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="monospace"
                    android:text="@string/accueil"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>
